some ajusts